# talk-cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindOpenGL.cmake  utils.cmake
doc/: smart_pointer.md
src/: main.cpp
src/cpp/lambda/: lambda.cpp
src/cpp/smart_pointer/: smart_pointer.h
src/gl/sample_gl/: sample_gl.cpp  sample_gl.h
src/lambda/: lambda.h
src/sample/: sample.cpp  sample.h
src/smart_pointer/: smart.cpp  smart_pointer.cpp
